--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Find your movie rating!"
     />
 
     <title>What is my rating ?</title>
